# SSHClient

./: .gitignore  CMakeLists.txt  TODO
cmake/scripts/win64/: build.bat  gencmake.bat
include/: ssh.h
src/: CMakeLists.txt  channels.cpp  channels.h  constants.h  endian.h  mac.cpp  mac.h  mpint.cpp  mpint.h  mpint.hpp  name-list.cpp  name-list.h  packets.cpp  packets.h  ssh.cpp  ssh_impl.cpp  ssh_impl.h  win32_harness.cpp
src/crypto/: crypto.cpp  crypto.h  key.hpp
src/debug/: debug.cpp  debug.h
src/include/: ssh.h
src/kex/: dh_groups.h  kex.cpp  kex.h
test/: CMakeLists.txt  mpint.test.cpp  name-list.test.cpp
